--- a/style.css
+++ b/style.css
@@ -306,3 +306,34 @@ input[type="radio"]#ColorIceBlue:checked:after {
 hr {
   width: 90%;
 }
+
+.fontSizeSlider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 25px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.fontSizeSlider:hover {
+  opacity: 1;
+}
+
+.fontSizeSlider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  background: #04AA6D;
+  cursor: pointer;
+}
+
+.fontSizeSlider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #04AA6D;
+  cursor: pointer;
+}
